[package]
name = "test-ormlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ormlite = { version = "0.9.3", features = ["runtime-tokio-rustls", "sqlite", "uuid"] }
tokio = { version = "1.25.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
